@@ -77,5 +77,6 @@ HORAS TRABALHADAS: 7h
 ==========
 
 - Organizacao dos scripts no backend
+- Ajustes no backend
 
-HORAS TRABALHADAS: 2h
+HORAS TRABALHADAS: 4h
